# LogIQ

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml
frontend/: ui.py
models/: metadata.json
models-artifacts/: log_classifier.joblib  metadata.json
src/: main.py
src/log_classifier/: __init__.py  app.py  config.py  logging_config.py
src/log_classifier/api/: __init__.py  router.py  schemas.py  server.py  utils.py
src/log_classifier/domain/: __init__.py  result.py  schemas.py  types.py
src/log_classifier/infrastructure/: __init__.py  model_registry.py
src/log_classifier/services/: __init__.py  classifier_service.py  embedding_service.py  llm_service.py  regex_service.py  routing_service.py
tests/: __init__.py  test_llm.py  test_routing.py
training/: log_classification.ipynb
training/dataset/: mock.csv
web/: TESTING_CHECKLIST.md
web/static/: index.js  style.css
web/templates/: index.html
