[project]
name = "log-classifier"
version = "0.1.0"
description = "Hybrid ML inference API for log classification (Regex + Embedding + Logistic Regression + LLM fallback)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.133.1",
    "groq>=1.0.0",
    "joblib>=1.5.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "numpy<2",
    "scikit-learn==1.6.1",
    "sentence-transformers==2.6.1",
    "transformers==4.38.2",
    "torch==2.2.2",
    "uvicorn>=0.41.0",
    "python-multipart>=0.0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/log_classifier"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
]
